--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                 <p>DEX INFO PAID</p>
                                 <p>ZERO TRANSACTIONS TAX </p>
                                 <div class="over-btn">
-                                    <a href="https://t.me/">JOIN NOW</a>
+                                    <a href="https://t.me/MEWKIMEWKI">JOIN NOW</a>
                                 </div>
                             </div>
                         </div>
@@ -152,7 +152,7 @@
                                 <p>1.  SPECIAL PARTNERSHIPS... </p>
                                 <p>2. MASSIVE GIVE AWAY ...</p>
                                 <p>3. SECRET LOCATION EVENT... </p>                                  <div class="over-btn">
-                                    <a href="https://t.me/"> JOIN NOW</a>
+                                    <a href="https://t.me/MEWKIMEWKI"> JOIN NOW</a>
                                 </div>
                             </div>
                         </div>
@@ -186,7 +186,7 @@
                                 <h3>$MEWKI</h3>
                                 <p> THE ONE AND ONLY TRUE GEM OUT OF RAYDIUM BIG THINGS COMING</p>
                                 <p class="separate-p tab-hider">JOIN THE COMMUNITY OR REGRET LATER NO GAINS FOR YOU</p>
-                                <a href="https://t.me/">JOIN NOW</a>
+                                <a href="https://t.me/MEWKIMEWKI">JOIN NOW</a>
                             </div>
                         </div>
                     </div>
@@ -208,8 +208,8 @@
                         <a class="f-logo" href="#banner"><b>$MEWKI </b></a>
                         <p>CUTE BUT DANGEROUS MEWKI IS SMACKING HIS WAY TO MILLIONS DONT F*CK AROUND AND MISS YOUR GOLDEN TICKET </p>
                         <div class="footer-social">
-                            <a href="https://t.me/"><i class="fa fa-telegram" aria-hidden="true"></i></a>
-                            <a href="https://twitter.com/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                            <a href="https://t.me/MEWKIMEWKI"><i class="fa fa-telegram" aria-hidden="true"></i></a>
+                            <a href="https://twitter.com/MEWKIsolana"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 
                         </div>
                     </div>
